# interface_rs485

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-master.yml  docker-image-robot-feature.yml  docker-image-robot-master.yml
config/: AUV8.yaml  LOCAL.yaml  interface_RS485_conf.yaml
launch/: interface_RS485.launch  interface_rs485.launch  interface_rs485_sim.launch
msg/: SendRS485Msg.msg
scripts/: client_socket.py  rs485_message_handler.py  rs485_message_handler_socket.py
src/: Configuration.cc  Configuration.h  interface_rs485Node.cc  interface_rs485Node.h  interface_rs485_node.cc  interface_rs485_node.h  interface_rs485_sim.py  main.cc  sharedQueue.h
src/driver/: serial.cc  serial.h
src/interface_rs485/: interface_rs485Node.cc  interface_rs485Node.h  main.cc
test/: basic_test.cpp
